# VoiceLoop

./: .gitignore  package-lock.json
docs/plans/: 2026-02-16-arena-backend-design.md  2026-02-16-arena-backend-implementation.md  2026-02-16-frontend-redesign-design.md  2026-02-17-smallestai-integration-design.md  2026-02-17-voice-evals-rewrite-design.md  2026-02-20-experiments-api-design.md  2026-02-20-experiments-api-implementation.md  2026-02-21-agent-battle-implementation.md  2026-02-21-agent-battle-mode-design.md  2026-02-21-multi-mode-battle-system-design.md  2026-02-21-stt-battle-implementation.md  2026-02-21-stt-battle-mode-design.md
evals/: pyproject.toml  requirements.txt
evals/voice_evals/: __init__.py  __main__.py  cli.py  config.py  exceptions.py  pipeline.py  pyproject.toml  types.py
evals/voice_evals/_vendor/utmos22/: fairseq_alt.py
evals/voice_evals/agent/: __init__.py  dialogue.py  error_recovery.py  intent.py  task_success.py
evals/voice_evals/asr/: __init__.py  asd.py  saer.py  semascore.py  transcription.py  wer.py
evals/voice_evals/audio/: __init__.py  diarization.py  loader.py  snr.py  vad.py
evals/voice_evals/latency/: __init__.py  e2e.py  percentiles.py  rtf.py  ttft.py
evals/voice_evals/tests/: conftest.py  test_agent.py  test_asr.py  test_audio.py  test_cli.py  test_config.py  test_latency.py  test_pipeline.py  test_types.py
evals/voice_evals/tts/: __init__.py  dnsmos.py  emotion.py  nisqa.py  prosody.py  speaker_similarity.py  utmos.py
frontend/: index.html  package-lock.json  package.json  vercel.json  vite.config.ts
frontend/blog/: voice-ai-2026-blog.jsx  voice-arena-blog.jsx
frontend/src/: App.tsx  index.css
frontend/src/components/: AnnouncementBar.tsx  AuroraGradient.tsx  BlogPage.tsx  BlogPostPage.tsx  CodeSection.tsx  DecisionIntelligenceSection.tsx  DocsPage.tsx  EvalsArenaSection.tsx  Features.tsx  (+11 more)
