[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "voice-evals"
version = "2.0.0"
description = "Voice AI evaluation framework"
requires-python = ">=3.10"
dependencies = [
    "librosa>=0.10.0",
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    "soundfile>=0.12.0",
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
    "transformers>=4.30.0",
    "openai-whisper>=20231117",
    "sentence-transformers>=2.2.0",
    "tiktoken>=0.5.0",
]

[project.optional-dependencies]
diarization = ["pyannote.audio>=3.1.0"]
emotion = ["funasr>=1.0.0"]
all = ["pyannote.audio>=3.1.0", "funasr>=1.0.0"]

[tool.setuptools.packages.find]
include = ["voice_evals*"]
